qtwebengine-opensource-src (5.9.0+dfsg-1) UNRELEASED; urgency=medium

  [ Sandro Knauß ]
  * do not use gold linker for small archs

  [ Simon Quigley ]
  * New upstream release.
  * Fix debian/watch so it isn't hardcoded to 5.7.1.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Mon, 05 Jun 2017 18:05:39 -0500

qtwebengine-opensource-src (5.7.1+dfsg-6.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Build with -g1 instead of -g on 32bit architectures.
    (Closes: #863927)

 -- Adrian Bunk <bunk@debian.org>  Mon, 05 Jun 2017 16:16:54 +0300

qtwebengine-opensource-src (5.7.1+dfsg-6) unstable; urgency=medium

  [ Sandro Knauß ]
  * Make it buildable on small archs again.

 -- Sandro Knauß <hefee@debian.org>  Wed, 18 Jan 2017 19:08:01 +0100

qtwebengine-opensource-src (5.7.1+dfsg-5) unstable; urgency=medium

  [ Sandro Knauß ]
  * Fix "h.264 video does not seem to work" (Closes: #851170)
    - Add use_proprietary_codecs to defines, to be able to use ffmpeg and h264
  * Add -Wl,-z,now to LFAGS, to make build full hardened
  * Add Build-Deps ninja-build
  * make build be less ram consuming on armhf and mipsel

 -- Sandro Knauß <hefee@debian.org>  Wed, 18 Jan 2017 13:04:01 +0100

qtwebengine-opensource-src (5.7.1+dfsg-4) unstable; urgency=medium

  [ Sandro Knauß ]
  * Move QtWebEngineProcess to libqt5webenginecore5
  * Make arch+indep build sucessfull too.
  * Mark gold compiler symbols as optional

 -- Sandro Knauß <hefee@debian.org>  Wed, 11 Jan 2017 13:16:55 +0100

qtwebengine-opensource-src (5.7.1+dfsg-3) unstable; urgency=medium

  * Make arch=all build successfully (Closes: #849794)
  * Release to unstable, to get bugs fixed.

 -- Sandro Knauß <hefee@debian.org>  Sun, 08 Jan 2017 20:53:35 +0100

qtwebengine-opensource-src (5.7.1+dfsg-2) experimental; urgency=medium

  * Fix "bad VCS links in debian/control" (Closes: #849301)
  * Fix "References to QtWebEngineWidgets is missing in dev package" (Closes: #849993)
  * Add patch to get mips support.