@@ -6,7 +6,7 @@ Last-Update: 2017-01-03
 This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
 --- a/src/3rdparty/chromium/build/build_config.h
 +++ b/src/3rdparty/chromium/build/build_config.h
-@@ -133,6 +133,17 @@
+@@ -160,6 +160,17 @@
  #define ARCH_CPU_32_BITS 1
  #define ARCH_CPU_LITTLE_ENDIAN 1
  #endif
@@ -26,16 +26,9 @@ This patch header follows DEP-3: http://dep.debian.net/deps/dep3/
  #endif
 --- a/src/3rdparty/chromium/third_party/webrtc/typedefs.h
 +++ b/src/3rdparty/chromium/third_party/webrtc/typedefs.h
-@@ -39,11 +39,21 @@
- #elif defined(__MIPSEL__)
- #if defined(__LP64__)
- #define WEBRTC_ARCH_MIPS64_FAMILY
-+#define WEBRTC_ARCH_64_BITS
- #else
- #define WEBRTC_ARCH_MIPS_FAMILY
--#endif
+@@ -44,6 +44,15 @@
  #define WEBRTC_ARCH_32_BITS
-+#endif
+ #endif
  #define WEBRTC_ARCH_LITTLE_ENDIAN
 +#elif defined(__MIPSEB__)
 +#if defined(__LP64__)
